--- a/progassignments/PA2.ipynb
+++ b/progassignments/PA2.ipynb
@@ -62,10 +62,10 @@
     "##### Calculations\n",
     "1. Dinner\n",
     "    * The total tab for dinner includes the meal, tax, and the tip. The tip will be calculated based on the combined meal and tax total. \n",
-    "    * The total tab for dinner should be rounded to nearest dollar:\n",
+    "    * The total tab for dinner should be **rounded *up* to nearest dollar**:\n",
     "    $$tab = \\lceil meal + tax + tip \\rceil$$\n",
     "        * Use the `ceil()` function from the `math` module to do this! \n",
-    "        * See `round_to_nearest_dollar()` below.\n",
+    "        * See `round_up_to_nearest_dollar()` below.\n",
     "2. Concert\n",
     "    * The total cost for the concert includes the concert tickets and the tax.\n",
     "3. Parking\n",
@@ -106,7 +106,7 @@
     "    * Example: `get_price(\"dinner\")` prompts the user with the string: \"How much does dinner cost before tax?\"\n",
     "1. `calculate_tax(price, tax_percent)`: Accepts 2 arguments via the parameters `price`, a float representing the cost of the activity and `tax_percent`, a float representing the sales tax percent. Computes the tax for `price` and returns the result as a floating point number.\n",
     "1. `calculate_tip(price, tip_percent)`: Accepts 2 arguments via the parameters `price`, a float representing the cost of the activity and `tip_percent`, a float representing the percentage the user would like to tip. Computes the tip for `price` and returns the result as a floating point number.\n",
-    "1. `round_to_nearest_dollar(price)`: Accepts 1 argument via the parameter `price`, a float representing the cost of the activity. Rounds `price` to the nearest dollar and returns the result as a floating point number.\n",
+    "1. `round_up_to_nearest_dollar(price)`: Accepts 1 argument via the parameter `price`, a float representing the cost of the activity. Rounds `price` to the nearest dollar and returns the result as a floating point number.\n",
     "1. `park_car()`: Accepts no arguments. Prompts the user for the cost to park their car and returns the result as a floating point number. Calls the following functions:\n",
     "    1. `get_price()`\n",
     "1. `go_to_dinner(tax_percent)`: Accepts 1 argument via the parameter `tax_percent`, a float representing the sales tax percent. Computes the total cost of dinner (meal + tax + tip, rounded to the nearest dollar) and returns the result as a floating point number. Calls the following functions:\n",
@@ -114,7 +114,7 @@
     "    1. `get_tip_percent()`\n",
     "    1. `calculate_tax()`\n",
     "    1. `calculate_tip()`\n",
-    "    1. `round_to_nearest_dollar()`\n",
+    "    1. `round_up_to_nearest_dollar()`\n",
     "1. `go_to_concert(tax_percent)`: Accepts 1 argument via the parameter `tax_percent`, a float representing the sales tax percent. Computes the total cost of the concert (concert tickets + tax) and returns the result as a floating point number. Calls the following functions:\n",
     "    1. `get_price()`\n",
     "    1. `calculate_tax()`\n",
