--- a/progassignments/PA3.ipynb
+++ b/progassignments/PA3.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "### Acknowledgments\n",
     "Content used in this assignment is based upon information in the following sources:\n",
-    "* No sources to cite"
+    "* The [Spotify Tracks API](https://developer.spotify.com/web-api/get-track/)"
    ]
   },
   {
