--- a/progassignments/PA3.ipynb
+++ b/progassignments/PA3.ipynb
@@ -37,6 +37,8 @@
     "### Overview and Requirements\n",
     "Write an \"are you a fan\" quiz program (quiz.py). The program will quiz the user on a topic of your choosing (keep the topic appropriate!!). For quiz ideas, check out [this website](http://www.allthetests.com/fan-quizzes-tests-Fantests.php).\n",
     "\n",
+    "Note: If you would like to attempt the bonus (see below), you may want to choose a topic that is related to music in some way.\n",
+    "\n",
     "Note: Please cite all sources you use in your code."
    ]
   },
