--- a/PythonCodingStandardCptS111.ipynb
+++ b/PythonCodingStandardCptS111.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [CptS 111](http://piazza.com/wsu/fall2016/cpts111/home) Coding Standard\n",
+    "# [CptS 111](http://piazza.com/wsu/spring2017/cpts111/home) Coding Standard\n",
     "[Washington State University](https://wsu.edu/)\n",
     "\n",
     "[Gina Sprint](http://eecs.wsu.edu/~gsprint/)\n",
@@ -29,66 +29,48 @@
     "### Source File Comments\n",
     "Begin programs with a header section that indicates\n",
     "* Programmer's name\n",
-    "* Date of current version\n",
-    "* Brief description of what program does\n",
     "* The course (\"CptS 111\") \n",
     "* Assignment number (e.g., \"Programming Assignment #1\")\n",
-    "\n",
+    "* Date of current version\n",
+    "* Brief description of what program does. If you use any sources other than those provided in the course, list them here. \n",
     "For example:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nProgrammer: Gina Sprint\\nClass: CptS 111-01, Fall 2016\\nProgramming Assignment #1\\n8/24/16\\n\\nDescription: This program computes...\\n'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "##############################################\n",
     "# Programmer: Gina Sprint\n",
-    "# Class: CptS 111-01, Fall 2016\n",
+    "# Class: CptS 111-01, Spring 2017\n",
     "# Programming Assignment #1\n",
     "# 8/24/16\n",
     "#\n",
     "# Description: This program computes...\n",
+    "# No sources to cite.\n",
     "##############################################\n",
+    "\n",
+    "# Programmer: Gina Sprint\n",
+    "# Class: CptS 111-01, Spring 2017\n",
+    "# Programming Assignment #1\n",
+    "# 8/24/16\n",
+    "#\n",
+    "# Description: This program computes...\n",
+    "# No sources to cite.\n",
     "\n",
     "'''\n",
     "Programmer: Gina Sprint\n",
-    "Class: CptS 111-01, Fall 2016\n",
+    "Class: CptS 111-01, Spring 2017\n",
     "Programming Assignment #1\n",
     "8/24/16\n",
     "\n",
     "Description: This program computes...\n",
+    "No sources to cite.\n",
     "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Programmer: Gina Sprint\n",
-    "# Class: CptS 111-01, Fall 2016\n",
-    "# Programming Assignment #1\n",
-    "# 8/24/16\n",
-    "#\n",
-    "# Description: This program computes..."
    ]
   },
   {
@@ -103,26 +85,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function compute_area_circle in module __main__:\n",
-      "\n",
-      "compute_area_circle(radius)\n",
-      "    Computes the area of a circle by multiplying PI by the square of the circle's radius\n",
-      "    Parameter radius: radius of the circle whose area this function computes\n",
-      "    Returns: area of a circle\n",
-      "\n",
-      "12.56\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def compute_area_circle(radius):\n",
     "    '''\n",
@@ -135,53 +102,6 @@
     "\n",
     "help(compute_area_circle)\n",
     "print(compute_area_circle(2.0))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Class Comments\n",
-    "Every class should contain a docstring, a comment placed immediately under the class header. Docstrings appear when you use the `help()` function with a class or object. The docstring should describe the class and what it represents. \n",
-    " \n",
-    "For example:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on class Circle in module __main__:\n",
-      "\n",
-      "class Circle(builtins.object)\n",
-      " |  A class representing a circle shape. \n",
-      " |  Circle has a radius attribute.\n",
-      " |  \n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "class Circle:\n",
-    "    '''\n",
-    "    A class representing a circle shape. \n",
-    "    Circle has a radius attribute.\n",
-    "    '''\n",
-    "help(Circle)"
    ]
   },
   {
