--- a/progassignments/PA3.ipynb
+++ b/progassignments/PA3.ipynb
@@ -259,7 +259,9 @@
    "source": [
     "### Submitting Assignments\n",
     "1.\tUse the Blackboard tool https://learn.wsu.edu to submit your assignment to your TA. You will submit your code to the corresponding programming assignment under the \"Assignment Turn-In\" tab. You must upload your solutions as `<your last name>_pa3.zip` by the due date and time.\n",
-    "2.\tYour .zip file should contain your .py file."
+    "2.\tYour .zip file should contain your .py file.\n",
+    "\n",
+    "**Note: By submitting your code to be graded, you are stating that your submission does not violate the CptS 111 Academic Integrity Policy outlined in the [Syllabus](http://nbviewer.jupyter.org/github/gsprint23/cpts111/blob/master/Syllabus.ipynb)**."
    ]
   },
   {
