--- a/progassignments/PA2.ipynb
+++ b/progassignments/PA2.ipynb
@@ -143,10 +143,10 @@
     "The total amount of money spent for the evening will be kept track of, so you know how much your credit card bill will be!\n",
     "\n",
     "What is the sales tax in your state (as a percentage)? 7.8\n",
-    "How much does parking cost before tax? 1.25\n",
+    "How much does parking cost? 1.25\n",
     "How much does dinner cost before tax? 49.99\n",
     "What percentage do you want to leave as a tip? 20\n",
-    "How much does parking cost before tax? 5.00\n",
+    "How much does parking cost? 5.00\n",
     "How much does concert cost before tax? 75.50\n",
     "\n",
     "After tax and tip, you spent $65.00 on dinner.\n",
