--- a/lessons/L5-2.ipynb
+++ b/lessons/L5-2.ipynb
@@ -208,7 +208,7 @@
     "* Complement of `X or Y` is `not X and not Y`\n",
     "\n",
     "Example: `(temp > 32) and (num_clouds == 0 or num_clouds == 1)` is true when the temperature is above freezing and the number of clouds in the sky is 0 or 1. By applying DeMorgan's Laws, the complement of this statement is:\n",
-    "`(temp <= 32) or (num_clouds != 0 and num_clouds != 1)` which is true when the temperature is at or below freezing, and there are more than 1 cloud in the sky.\n"
+    "`(temp <= 32) or (num_clouds != 0 and num_clouds != 1)` which is true when the temperature is at or below freezing, and there is more than 1 cloud in the sky.\n"
    ]
   },
   {
