--- a/labs/Lab6.ipynb
+++ b/labs/Lab6.ipynb
@@ -12,8 +12,8 @@
     "\n",
     "### Learner Objectives\n",
     "At the conclusion of this lab, participants should be able to:\n",
-    "* `if-elif-else` statements\n",
-    "* Nested `if` statements\n",
+    "* Implement `if-elif-else` statements\n",
+    "* Implement nested `if` statements\n",
     "\n",
     "### Prerequisites\n",
     "Before starting this lab, participants should be able to:\n",
@@ -212,7 +212,7 @@
     "## Task 9\n",
     "Add new functionality to PA1 to make the chatbot more interesting:\n",
     "* Call the user a \"Pullmanite\" if they are from Pullman. Otherwise use code from PA2 to tell the user how far away their hometown is from Pullman, WA. Tell them if their hometown is \"close\" or \"far\" from Pullman.\n",
-    "* Tell the user if their favorite number is within 10 of your favorite number (above or below).\n",
+    "* Tell the user if they are younger or older than your chatbot.\n",
     "* If the user's dream car is 6 figures, tell them.\n",
     "* Other ideas? Enjoy!"
    ]
@@ -222,18 +222,6 @@
    "metadata": {},
    "source": [
     "## Task 10\n",
-    "Add new functionality to PA2 to identify:\n",
-    "* The closest pair of cities\n",
-    "* The furthest pair of cities\n",
-    "* The closest city to Pullman, WA\n",
-    "* The furthest city from Pullman, WA"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Additional Tasks\n",
     "Complete all of the tasks you have not yet completed from Labs 1-5. \n",
     "\n",
     "Define functions where appropriate!"
