--- a/lessons/L8-1.ipynb
+++ b/lessons/L8-1.ipynb
@@ -30,7 +30,6 @@
     "Today, we'll learn about loops: the ability to repeatedly execute a sequence of statements.\n",
     "\n",
     "We have already see examples where we have repeated functionality several times, such as:\n",
-    "* PA2: we prompted the user to enter mutiple city pairs\n",
     "* Lab4: drawing arms of snowflakes with Turtle graphics\n",
     "* Lab5: prompting the user to enter 5 numbers and computing the average\n",
     "\n",
@@ -187,106 +186,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's write a program to print the first 20 even numbers:"
+    "Now let's write a program to print the first 20 even numbers (2 4 6 8 10 12 14 16 18 20 22 24 26 28 30 32 34 36 38 40):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "One approach: \n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "10\n",
-      "12\n",
-      "14\n",
-      "16\n",
-      "18\n",
-      "20\n",
-      "22\n",
-      "24\n",
-      "26\n",
-      "28\n",
-      "30\n",
-      "32\n",
-      "34\n",
-      "36\n",
-      "38\n",
-      "40\n",
-      "Another approach: \n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "10\n",
-      "12\n",
-      "14\n",
-      "16\n",
-      "18\n",
-      "20\n",
-      "22\n",
-      "24\n",
-      "26\n",
-      "28\n",
-      "30\n",
-      "32\n",
-      "34\n",
-      "36\n",
-      "38\n",
-      "40\n",
-      "Another approach: \n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "10\n",
-      "12\n",
-      "14\n",
-      "16\n",
-      "18\n",
-      "20\n",
-      "22\n",
-      "24\n",
-      "26\n",
-      "28\n",
-      "30\n",
-      "32\n",
-      "34\n",
-      "36\n",
-      "38\n",
-      "40\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"One approach: \")\n",
-    "i = 1\n",
-    "while i <= 20:\n",
-    "    print(i * 2)\n",
-    "    i += 1\n",
-    "    \n",
-    "print(\"Another approach: \")\n",
-    "i = 2 \n",
-    "while i <= 40:\n",
-    "    print(i)\n",
-    "    i += 2\n",
-    "    \n",
-    "print(\"Another approach: \")\n",
-    "i = 2\n",
-    "while i <= 40:\n",
-    "    if i % 2 == 0:\n",
-    "        print(i)\n",
-    "    i += 1"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -348,56 +258,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please enter a number between 1 and 10 inclusive\n",
-      "9\n",
-      "Your guess was too high\n",
-      "Please enter a number between 1 and 10 inclusive\n",
-      "8\n",
-      "Your guess was too high\n",
-      "Please enter a number between 1 and 10 inclusive\n",
-      "7\n",
-      "Your guess was too high\n",
-      "Please enter a number between 1 and 10 inclusive\n",
-      "6\n",
-      "Your guess was too high\n",
-      "Please enter a number between 1 and 10 inclusive\n",
-      "5\n",
-      "Your guess was too high\n",
-      "Please enter a number between 1 and 10 inclusive\n",
-      "4\n",
-      "Congrats, you guessed the number correctly\n",
-      "Exiting guessing game program\n"
-     ]
-    }
-   ],
-   "source": [
-    "num_to_guess = 4\n",
-    "players_guess = 0\n",
-    "correct = False\n",
-    "\n",
-    "while not correct:\n",
-    "    print(\"Please enter a number between 1 and 10 inclusive\")\n",
-    "    players_guess = int(input())\n",
-    "\n",
-    "    # a guess is either equal to, greater than, or less than \n",
-    "    if players_guess == num_to_guess: # BC 1\n",
-    "        print(\"Congrats, you guessed the number correctly\")\n",
-    "        correct = True # exit loop\n",
-    "    elif players_guess > num_to_guess: # BC 2\n",
-    "        print(\"Your guess was too high\")\n",
-    "    else: # players_guess < num_to_guess\n",
-    "        print(\"Your guess was too low\")\n",
-    "print(\"Exiting guessing game program\")"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
