--- a/lessons/L8-1.ipynb
+++ b/lessons/L8-1.ipynb
@@ -57,12 +57,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Please enter a transaction: 100.00\n",
+      "Please enter a transaction: 250.50\n",
       "Please enter a transaction: 100.50\n",
-      "Please enter a transaction: 100\n",
-      "Please enter a transaction: 1000\n",
-      "Please enter a transaction: 25.25\n",
-      "Please enter a transaction: 12.12\n",
-      "On average, you spend 247.57 per credit card transaction\n"
+      "Please enter a transaction: 5.90\n",
+      "Please enter a transaction: 100.00\n",
+      "On average, you spend 111.38 per credit card transaction\n"
      ]
     }
    ],
@@ -87,6 +87,12 @@
     "    total_spent += get_transaction_price()\n",
     "    total_spent += get_transaction_price()\n",
     "    total_spent += get_transaction_price()\n",
+    "    total_spent += get_transaction_price()\n",
+    "    total_spent += get_transaction_price()\n",
+    "    total_spent += get_transaction_price()\n",
+    "    total_spent += get_transaction_price()\n",
+    "    total_spent += get_transaction_price()\n",
+    "    \n",
     "    \n",
     "    return total_spent\n",
     "\n",
@@ -191,12 +197,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One approach: \n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n",
+      "22\n",
+      "24\n",
+      "26\n",
+      "28\n",
+      "30\n",
+      "32\n",
+      "34\n",
+      "36\n",
+      "38\n",
+      "40\n",
+      "Another approach: \n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n",
+      "22\n",
+      "24\n",
+      "26\n",
+      "28\n",
+      "30\n",
+      "32\n",
+      "34\n",
+      "36\n",
+      "38\n",
+      "40\n",
+      "Another approach: \n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n",
+      "22\n",
+      "24\n",
+      "26\n",
+      "28\n",
+      "30\n",
+      "32\n",
+      "34\n",
+      "36\n",
+      "38\n",
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"One approach: \")\n",
+    "i = 1\n",
+    "while i <= 20:\n",
+    "    print(i * 2)\n",
+    "    i += 1\n",
+    "    \n",
+    "print(\"Another approach: \")\n",
+    "i = 2 \n",
+    "while i <= 40:\n",
+    "    print(i)\n",
+    "    i += 2\n",
+    "    \n",
+    "print(\"Another approach: \")\n",
+    "i = 2\n",
+    "while i <= 40:\n",
+    "    if i % 2 == 0:\n",
+    "        print(i)\n",
+    "    i += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -208,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -218,12 +313,12 @@
      "output_type": "stream",
      "text": [
       "Please enter the number of transactions: 5\n",
-      "Please enter a transaction: 10.50\n",
-      "Please enter a transaction: 100\n",
-      "Please enter a transaction: 200\n",
-      "Please enter a transaction: 150.56\n",
-      "Please enter a transaction: 2000\n",
-      "On average, you spend 492.21 per credit card transaction\n"
+      "Please enter a transaction: 10\n",
+      "Please enter a transaction: 11\n",
+      "Please enter a transaction: 56\n",
+      "Please enter a transaction: 77\n",
+      "Please enter a transaction: 45\n",
+      "On average, you spend 39.80 per credit card transaction\n"
      ]
     }
    ],
@@ -258,12 +353,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter a number between 1 and 10 inclusive\n",
+      "7\n",
+      "Your guess was too high\n",
+      "Please enter a number between 1 and 10 inclusive\n",
+      "2\n",
+      "Your guess was too low\n",
+      "Please enter a number between 1 and 10 inclusive\n",
+      "3\n",
+      "Your guess was too low\n",
+      "Please enter a number between 1 and 10 inclusive\n",
+      "4\n",
+      "Congrats, you guessed the number correctly\n",
+      "Exiting guessing game program\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_to_guess = 4\n",
+    "players_guess = 0\n",
+    "correct = False\n",
+    "\n",
+    "while not correct:\n",
+    "    print(\"Please enter a number between 1 and 10 inclusive\")\n",
+    "    players_guess = int(input())\n",
+    "\n",
+    "    # a guess is either equal to, greater than, or less than \n",
+    "    if players_guess == num_to_guess: # BC 1\n",
+    "        print(\"Congrats, you guessed the number correctly\")\n",
+    "        correct = True # exit loop\n",
+    "    elif players_guess > num_to_guess: # BC 2\n",
+    "        print(\"Your guess was too high\")\n",
+    "    else: # players_guess < num_to_guess\n",
+    "        print(\"Your guess was too low\")\n",
+    "print(\"Exiting guessing game program\")"
+   ]
   },
   {
    "cell_type": "markdown",
