--- a/progassignments/PA4.ipynb
+++ b/progassignments/PA4.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "Here is an example of a Trotter (left pig) and a Snouter (right pig):\n",
     "\n",
-    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/pass_the_pigs_dice.jpg\" width=300>\n",
+    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/pass_the_pigs_dice.jpg\" width=300/>\n",
     "(image from [https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/Pass_the_pigs_dice.jpg/600px-Pass_the_pigs_dice.jpg](https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/Pass_the_pigs_dice.jpg/600px-Pass_the_pigs_dice.jpg))\n",
     "\n",
     "After the pigs have come to rest, the player gains or loses points based on the way the pigs land:\n",
