--- a/lessons/L8-2.ipynb
+++ b/lessons/L8-2.ipynb
@@ -440,7 +440,7 @@
    "metadata": {},
    "source": [
     "## TODO\n",
-    "1. Read Chapter 7 on iteration.\n",
+    "1. Read Chapter 7,8,9 in zyBooks and Chapter 8 in *How to Think Like a Computer Scientist.*\n",
     "1. Get started with PA4, it's fun!\n",
     "\n",
     "## Next Lesson\n",
