--- a/lessons/L8-2.ipynb
+++ b/lessons/L8-2.ipynb
@@ -21,12 +21,14 @@
    "metadata": {},
    "source": [
     "### Random Numbers\n",
-    "To generate random numbers, we need to import the `random` module. Then, we will call the function `randrange(start, stop)` to generate a random number in the range `start` to `stop - 1`."
+    "To generate random numbers, we need to import the `random` module. Then, we can call either function to generate a random number:\n",
+    "1. `randrange(start, stop)` to generate a random number in the range `start` to `stop - 1`\n",
+    "2. `randint(start, stop)` to generate a random number in the range `start` to `stop`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -35,8 +37,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "8\n"
+      "5\n",
+      "9\n"
      ]
     }
    ],
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -72,16 +74,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "2\n",
       "5\n",
-      "4\n",
+      "2\n",
       "6\n",
-      "3\n",
+      "4\n",
       "2\n",
+      "1\n",
+      "3\n",
+      "1\n",
       "5\n",
-      "5\n",
-      "4\n"
+      "2\n"
      ]
     }
    ],
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -123,22 +125,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "**Welcome to my game!**\n",
       "Please choose from the following options\n",
       "1) View the game rules\n",
       "2) Play the game\n",
       "3) View the high score\n",
       "4) Quit\n",
-      ">>9\n",
+      "Menu choice: 1\n",
+      "Displaying rules...\n",
+      "\n",
+      "**Welcome to my game!**\n",
+      "Please choose from the following options\n",
+      "1) View the game rules\n",
+      "2) Play the game\n",
+      "3) View the high score\n",
+      "4) Quit\n",
+      "Menu choice: 2\n",
+      "Playing the game...\n",
+      "\n",
+      "**Welcome to my game!**\n",
+      "Please choose from the following options\n",
+      "1) View the game rules\n",
+      "2) Play the game\n",
+      "3) View the high score\n",
+      "4) Quit\n",
+      "Menu choice: 3\n",
+      "Displaying the high score...\n",
+      "\n",
+      "**Welcome to my game!**\n",
+      "Please choose from the following options\n",
+      "1) View the game rules\n",
+      "2) Play the game\n",
+      "3) View the high score\n",
+      "4) Quit\n",
+      "Menu choice: 5\n",
       "Not a valid menu option\n",
+      "\n",
       "**Welcome to my game!**\n",
       "Please choose from the following options\n",
       "1) View the game rules\n",
       "2) Play the game\n",
       "3) View the high score\n",
       "4) Quit\n",
-      ">>4\n",
-      "Thank you for playing\n"
+      "Menu choice: 4\n",
+      "Saving game state and exiting...\n"
      ]
     }
    ],
@@ -147,29 +178,29 @@
     "    '''\n",
     "    \n",
     "    '''\n",
-    "    print(\"**Welcome to my game!**\")\n",
+    "    print(\"\\n**Welcome to my game!**\")\n",
     "    print(\"Please choose from the following options\")\n",
     "    print(\"1) View the game rules\")\n",
     "    print(\"2) Play the game\")\n",
     "    print(\"3) View the high score\")\n",
     "    print(\"4) Quit\")\n",
-    "   \n",
+    "\n",
     "def take_menu_action(choice):\n",
     "    '''\n",
     "    \n",
     "    '''\n",
     "    if choice == 1:\n",
+    "        print(\"Displaying rules...\")\n",
     "        # TODO call a function to display the rules\n",
-    "        pass\n",
     "    elif choice == 2:\n",
+    "        print(\"Playing the game...\")\n",
     "        # TODO call a function to play the game\n",
-    "        pass\n",
     "    elif choice == 3:\n",
+    "        print(\"Displaying the high score...\")\n",
     "        # TODO call a function to display the high score\n",
-    "        pass\n",
     "    elif choice == 4:\n",
+    "        print(\"Saving game state and exiting...\")\n",
     "        # TODO call a function to save the state of the game (e.g. high score)\n",
-    "        print(\"Thank you for playing\")\n",
     "    else:\n",
     "        print(\"Not a valid menu option\")\n",
     "    \n",
@@ -178,10 +209,9 @@
     "    \n",
     "    '''\n",
     "    choice = -1\n",
-    "    \n",
     "    while choice != 4:\n",
     "        display_menu()\n",
-    "        choice = int(input(\">>\"))\n",
+    "        choice = int(input(\"Menu choice: \"))\n",
     "        take_menu_action(choice)\n",
     "\n",
     "main()"
@@ -223,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -333,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -363,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -372,16 +402,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter the number of transactions: 4\n",
-      "Please enter a transaction: 5\n",
-      "5.0\n",
-      "Please enter a transaction: 5\n",
-      "5.0\n",
-      "Please enter a transaction: 5\n",
-      "5.0\n",
-      "Please enter a transaction: 5\n",
-      "5.0\n",
-      "On average, you spend 5.00 per transaction\n"
+      "Please enter the number of transactions: 5\n",
+      "Please enter a transaction: 100.50\n",
+      "100.5\n",
+      "Please enter a transaction: 50.45\n",
+      "50.45\n",
+      "Please enter a transaction: 23.43\n",
+      "23.43\n",
+      "Please enter a transaction: 22.22\n",
+      "22.22\n",
+      "Please enter a transaction: 100.00\n",
+      "100.0\n",
+      "On average, you spend 59.32 per transaction\n"
      ]
     }
    ],
