--- a/progassignments/PA4.ipynb
+++ b/progassignments/PA4.ipynb
@@ -93,7 +93,14 @@
     "    * \"TROT\" (for trotter)\n",
     "    * \"SNOUT\" (for snouter)\n",
     "    * \"LEAN\" (for leaning jowler)\n",
-    "1. (10 pts) `determine_roll_result(pig1, pig2)`: Determines the roll result based on the two pigs' positions and returns a string representing the roll result (e.g. \"Sider\", \"Double razorback\", etc.).\n",
+    "1. (10 pts) `determine_roll_result(pig1, pig2)`: Determines the roll result based on the two pigs' positions and returns a string representing the roll result, one of:\n",
+    "    * \"SIDER\" (for both pigs on their side with dots facing the same direction)\n",
+    "    * \"DBL-RAZR\" (for a double razorback)\n",
+    "    * \"DBL-TROT\" (for a double trotter)\n",
+    "    * \"DBL-SNOUT\" (for a double snouter)\n",
+    "    * \"DBL-LEAN\" (for a double leaning jowler)\n",
+    "    * \"PIGOUT\" (for both pigs on their side, one with dot up one with dot down)\n",
+    "    * \"MIXED\" (for a mixed combo)\n",
     "1. (10 pts) `calculate_total_roll_points(roll_result)`: Determines the total points rolled based on the both pigs' positions (`roll_result` e.g. \"Sider\", \"Double razorback, etc.) and returns the total points. \n",
     "1. (30 pts) `main()` and the definition of additional functions beyond than the ones listed above: Call the above functions in order to play the game. Break the problem into tasks and build your solution accordingly. You will be graded on your approach. Ask the instructor or your TA for help with this!\n",
     "\n",
