--- a/progassignments/PA4.ipynb
+++ b/progassignments/PA4.ipynb
@@ -101,7 +101,7 @@
     "    * \"DBL-LEAN\" (for a double leaning jowler)\n",
     "    * \"PIGOUT\" (for both pigs on their side, one with dot up one with dot down)\n",
     "    * \"MIXED\" (for a mixed combo)\n",
-    "1. (10 pts) `calculate_total_roll_points(roll_result)`: Determines the total points rolled based on the both pigs' positions (`roll_result` e.g. \"Sider\", \"Double razorback, etc.) and returns the total points. \n",
+    "1. (10 pts) `calculate_total_roll_points(pig1, pig2, roll_result)`: Determines the total points rolled based on the both pigs' positions (`roll_result` e.g. \"SIDER\", \"DBL-RAZR\", etc.) and returns the total points. \n",
     "1. (30 pts) `main()` and the definition of additional functions beyond than the ones listed above: Call the above functions in order to play the game. Break the problem into tasks and build your solution accordingly. You will be graded on your approach. Ask the instructor or your TA for help with this!\n",
     "\n",
     "Note: **Pass the Pigs should be continually played until the players want to quit the game.**\n",
