--- a/lessons/L9-1.ipynb
+++ b/lessons/L9-1.ipynb
@@ -27,11 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01234"
+     ]
+    }
+   ],
    "source": [
     "# 1\n",
     "x = 0\n",
@@ -42,11 +50,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# 2\n",
     "x = 0\n",
@@ -57,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -78,7 +98,7 @@
    },
    "outputs": [],
    "source": [
-    "# 4\n",
+    "# 4 infinite loop\n",
     "x = 5\n",
     "while x < 10:\n",
     "    print(x)\n",
@@ -93,7 +113,7 @@
    },
    "outputs": [],
    "source": [
-    "# 5\n",
+    "# 5 infinite loop\n",
     "x = 0\n",
     "while x < 5:\n",
     "    print(x)\n",
@@ -102,11 +122,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# 6\n",
     "x = 0\n",
@@ -117,13 +145,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-5-9faa509e8581>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-5-9faa509e8581>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    print(x)\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
-    "# 7 error\n",
+    "# 7\n",
     "x = 0\n",
     "while x < 5:\n",
     "print(x)\n",
@@ -132,11 +169,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# 8\n",
     "for x in range(0, 3, 1):\n",
@@ -145,11 +192,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "135"
+     ]
+    }
+   ],
    "source": [
     "# 9\n",
     "for i in range(1, 7, 2):\n",
@@ -168,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -177,16 +232,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter a string: hello\n",
-      "Please enter a string: goodbye\n",
-      "Please enter a string: stop\n"
+      "Please enter a word: hello\n",
+      "Please enter a word: goodbye\n",
+      "Please enter a word: cpts111\n",
+      "Please enter a word: stop\n"
      ]
     }
    ],
    "source": [
     "while True:\n",
-    "    line = input(\"Please enter a string: \")\n",
-    "    if line == \"stop\":\n",
+    "    word = input(\"Please enter a word: \")\n",
+    "    if word == \"stop\":\n",
     "        break"
    ]
   },
@@ -202,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -261,12 +317,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of lines: 5\n",
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_lines = int(input(\"Number of lines: \"))\n",
+    "for i in range(num_lines):\n",
+    "    for j in range(0, i + 1):\n",
+    "        print(\"*\", end=\"\")\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -278,12 +353,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of lines: 5\n",
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_lines = int(input(\"Number of lines: \"))\n",
+    "for i in range(num_lines):\n",
+    "    for j in range(i, num_lines):\n",
+    "        print(\"*\", end=\"\")\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -295,12 +389,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of lines: 5\n",
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_lines = int(input(\"Number of lines: \"))\n",
+    "for i in range(num_lines):\n",
+    "    print(\"*\" * (num_lines - i))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -338,10 +449,13 @@
       "3) Quit\n",
       ">>2\n",
       "Please enter a number between 1 and 10 inclusive\n",
-      "5\n",
+      "9\n",
+      "Your guess was too high\n",
+      "Please enter a number between 1 and 10 inclusive\n",
+      "4\n",
       "Your guess was too low\n",
       "Please enter a number between 1 and 10 inclusive\n",
-      "7\n",
+      "6\n",
       "Congrats, you guessed the number correctly\n",
       "\n",
       "**Welcome to the guess my number game!**\n",
@@ -351,13 +465,13 @@
       "3) Quit\n",
       ">>2\n",
       "Please enter a number between 1 and 10 inclusive\n",
-      "3\n",
-      "Your guess was too high\n",
-      "Please enter a number between 1 and 10 inclusive\n",
-      "2\n",
-      "Your guess was too high\n",
-      "Please enter a number between 1 and 10 inclusive\n",
       "1\n",
+      "Your guess was too low\n",
+      "Please enter a number between 1 and 10 inclusive\n",
+      "5\n",
+      "Your guess was too low\n",
+      "Please enter a number between 1 and 10 inclusive\n",
+      "8\n",
       "Congrats, you guessed the number correctly\n",
       "\n",
       "**Welcome to the guess my number game!**\n",
@@ -437,6 +551,83 @@
     "        take_menu_action(choice)\n",
     "\n",
     "main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MA12 Practice Problem\n",
+    "On a blank sheet of paper, write the following:\n",
+    "1. Your full name\n",
+    "1. Your TA name\n",
+    "1. MA #12\n",
+    "\n",
+    "In pairs (or individually), solve the following problems. Each student needs to turn in their own paper to get credit for MA12.\n",
+    "\n",
+    "### Problem 1\n",
+    "Write a program that prompts the user for an integer, `n`, representing a grid size. Using nesting loops, display a `n` by `n` grid of stars. Example:\n",
+    "\n",
+    "```\n",
+    "Please enter a n value: 5\n",
+    "* * * * * \n",
+    "* * * * * \n",
+    "* * * * * \n",
+    "* * * * * \n",
+    "* * * * * \n",
+    "```\n",
+    "\n",
+    "### Problem 2\n",
+    "Now, instead of stars, display numbers like the following example. Example:\n",
+    "\n",
+    "```\n",
+    "Please enter a n value: 5\n",
+    "1 1 1 1 1 \n",
+    "2 2 2 2 2 \n",
+    "3 3 3 3 3 \n",
+    "4 4 4 4 4 \n",
+    "5 5 5 5 5 \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of lines: 5\n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "1 1 1 1 1 \n",
+      "2 2 2 2 2 \n",
+      "3 3 3 3 3 \n",
+      "4 4 4 4 4 \n",
+      "5 5 5 5 5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# solutions\n",
+    "\n",
+    "num_lines = int(input(\"Number of lines: \"))\n",
+    "for i in range(num_lines):\n",
+    "    for j in range(num_lines):\n",
+    "        print(\"*\", end=\" \")\n",
+    "    print()\n",
+    "    \n",
+    "for i in range(num_lines):\n",
+    "    for j in range(num_lines):\n",
+    "        print(i + 1, end=\" \")\n",
+    "    print()"
    ]
   },
   {
