--- a/progassignments/PA5.ipynb
+++ b/progassignments/PA5.ipynb
@@ -246,7 +246,7 @@
     "### Bonus (10 pts)\n",
     "Using the [Google Maps Embed API](https://developers.google.com/maps/documentation/embed/guide), create a webpage containing an embedded Google Map for the road trip. For example, the webpage we are going to build for [florida_roadtrip.txt](https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/files/florida_roadtrip.txt) looks like the following:\n",
     "\n",
-    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/florida_roadtrip.png\" width=500>\n",
+    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/florida_roadtrip.png\" width=\"500\">\n",
     "\n",
     "#### Bonus Setup\n",
     "To do the Bonus, you will need a free Google account and a free Google Maps API key:\n",
