--- a/lessons/L10-1.ipynb
+++ b/lessons/L10-1.ipynb
@@ -164,7 +164,8 @@
     "* Using a file object whose cursor is at the end of the file\n",
     "* Opening a file for reading or writing without the appropriate access rights\n",
     "* Opening a file for writing when no disk space is available\n",
-    "* Opening a file for writing (\"w\") when the users wants to preserve the previous contents of the file (\"w\" discards all contents of file)"
+    "* Opening a file for writing (\"w\") when the users wants to preserve the previous contents of the file (\"w\" discards all contents of file)\n",
+    "    * Use (\"a\") to append instead"
    ]
   },
   {
@@ -199,12 +200,11 @@
    "metadata": {},
    "source": [
     "## TODO\n",
-    "1. Turn in PA4, it is due tonight\n",
-    "1. Start PA5\n",
-    "1. Read Section 9.1 and Chapter 14\n",
+    "1. Finish PA4.\n",
+    "1. Start PA5.\n",
     "\n",
     "## Next Lesson\n",
-    "1. We learn more about Strings"
+    "1. We learn more about Strings."
    ]
   }
  ],
