--- a/lessons/L10-2.ipynb
+++ b/lessons/L10-2.ipynb
@@ -309,18 +309,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MA15 Practice Problem\n",
-    "On a blank sheet of paper, write the following:\n",
-    "1. Your full name\n",
-    "1. Your TA name\n",
-    "1. MA #15\n",
-    "\n",
-    "In pairs (or individually), solve the following problems. Each student needs to turn in their own paper to get credit for MA15."
+    "## Practice Problem"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -334,13 +328,22 @@
    "metadata": {},
    "source": [
     "Given the above string declaration, answer the following questions:\n",
-    "1. What are the valid positive and negative indices of `holiday`?\n",
+    "1. What are the valid indices of `holiday`?\n",
     "1. Write code to print the number of characters in `holiday`\n",
     "1. Write code to print the \"a\"\n",
     "1. Write code to print \"ter\"\n",
-    "1. Write code to assign a new string \"easter is April 16th\" using `holiday`\n",
-    "1. Write code to assign a new string \"Easter\" using `holiday`"
+    "1. Write code to assign \"easter is April 16th\" to a new string using `holiday`\n",
+    "1. Write code to assign \"Easter\" to a new string using `holiday`"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
