--- a/lessons/L10-1.ipynb
+++ b/lessons/L10-1.ipynb
@@ -188,12 +188,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aa\n",
+      "aah\n",
+      "aahed\n",
+      "aahing\n",
+      "aahs\n"
+     ]
+    }
+   ],
+   "source": [
+    "def open_input_file(fname):\n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
+    "    in_file = open(fname, \"r\")\n",
+    "    return in_file\n",
+    "\n",
+    "def close_file(file_2_close):\n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
+    "    file_2_close.close()\n",
+    "    \n",
+    "def first_five_words(in_file):\n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
+    "    for i in range(5):\n",
+    "        print(in_file.readline(), end=\"\")\n",
+    "\n",
+    "def main():\n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
+    "    fin = open_input_file(\"words.txt\")\n",
+    "    first_five_words(fin)\n",
+    "    close_file(fin)\n",
+    "    \n",
+    "main()"
+   ]
   },
   {
    "cell_type": "markdown",
