--- a/lessons/L10-2.ipynb
+++ b/lessons/L10-2.ipynb
@@ -13,8 +13,7 @@
     "Learner objectives for this lesson\n",
     "* Learn about string indexing\n",
     "* Iterate through characters in a string using loops\n",
-    "* Learn about string slicing\n",
-    "* Understand immutability"
+    "* Learn about string slicing"
    ]
   },
   {
@@ -29,12 +28,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PYTHON\n",
+      "PYTHON\n",
+      "PYTHON 100.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"PYTHON\")\n",
+    "my_string = \"PYTHON\"\n",
+    "print(my_string)\n",
+    "print(\"%s %s\" %(my_string, str(100.0)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,12 +60,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cpts111 uses PYTHON!\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_string = \"cpts\" + \"111\" + \" uses \" + my_string + \"!\"\n",
+    "print(new_string)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,12 +94,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P Y T H O N "
+     ]
+    }
+   ],
+   "source": [
+    "for character in \"PYTHON\":\n",
+    "    print(character, end=\" \")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,12 +137,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P\n",
+      "N\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_string = \"PYTHON\"\n",
+    "\n",
+    "print(my_string[0])\n",
+    "print(my_string[5])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,12 +167,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "string index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m--------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0mTraceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-c91c2d83a967>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmy_string\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m: string index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_string[6])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,12 +199,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T\n",
+      "Y\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 2\n",
+    "print(my_string[i])\n",
+    "print(my_string[i - 1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,12 +229,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of PYTHON is: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "length = len(my_string)\n",
+    "print(\"The length of %s is: %d\" %(my_string, length))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,12 +256,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N\n"
+     ]
+    }
+   ],
+   "source": [
+    "str_len = len(my_string)\n",
+    "print(my_string[str_len - 1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,12 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "empty_string = \"\"\n",
+    "print(empty_string, end=\"\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,12 +304,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P Y T H O N "
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "\n",
+    "while i < len(my_string):\n",
+    "    print(my_string[i], end=\" \")\n",
+    "    i += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -228,12 +344,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YT\n",
+      "111\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the YT of PYTHON\n",
+    "print(my_string[1:3])\n",
+    "\n",
+    "course = \"CptS111\"\n",
+    "\n",
+    "# get a slice of the 111\n",
+    "course_num = course[4:7]\n",
+    "print(course_num)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -244,12 +378,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PY\n",
+      "PY\n",
+      "THON\n",
+      "THON\n"
+     ]
+    }
+   ],
+   "source": [
+    "# these two are the same\n",
+    "print(my_string[0:2])\n",
+    "print(my_string[:2])\n",
+    "\n",
+    "# these two are the same\n",
+    "print(my_string[2:len(my_string)])\n",
+    "print(my_string[2:])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,12 +418,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N\n",
+      "P\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_string[-1])\n",
+    "print(my_string[-6])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -282,12 +447,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m--------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-12-12bd1ac7aa74>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# crashes because strings are immutable\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmy_string\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"p\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "# crashes because strings are immutable\n",
+    "my_string[0] = \"p\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -298,12 +478,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pYTHON\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_string = \"p\" + my_string[1:]\n",
+    "print(new_string)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -314,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -337,20 +528,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## TODO\n",
-    "1. Read Chapter 9 in How to Think Like a Computer Scientist\n",
+    "1. Read Chapter 8 and Chapter 9\n",
     "1. Work on PA5\n",
     "\n",
     "## Next Lesson\n",
